@@ -10,9 +10,11 @@
 		*Hard to replicate this	
 	**Made Sure the site is suitable for multiple devices
 	**Fixed Horizontal scrolling issue
-
+	**Made most read links clickable
+	**Made Footer into collapsible menu for smaller device size
 9/1/18
 	-Started tweaking the website to be better across devices.
+	-Finished 1st part of media queries - Up to 1269px
 	
 8/1/18
 	-Added Upper limit to search by date
